# EllipticPDE

./: .gitignore  .mailmap  README.md
.github/workflows/: lean.yml
lean/: EllipticDirichlet.lean  EllipticPdes.lean  Gates.lean  lake-manifest.json  lakefile.toml
lean/EllipticDirichlet/: BilinearForm.lean  BoundedInstances.lean  Compactness.lean  Existence.lean  Fredholm.lean  FredholmComplete.lean  Garding.lean  GeneralForm.lean  Hneg.lean  RellichDischarge.lean  Spectrum.lean  SpectrumSigma.lean
lean/EllipticDirichlet/Embedding/: Convolution.lean  Morrey.lean  MorreyOneDim.lean  RayIntegral.lean  WeakDerivBridge.lean  WeakGradient.lean
lean/EllipticDirichlet/Poincare/: BoundedDomain.lean  BoxSlice.lean  Density.lean  Domain.lean  Fubini.lean  Geometry.lean  OneDim.lean
lean/EllipticDirichlet/Regularity/: Caccioppoli.lean  CoeffC1.lean  CoeffC2.lean  CutoffTower.lean  DiffQuotientBound.lean  DifferenceQuotient.lean  DifferentiatedEquation.lean  Interior.lean  InteriorCompactSupport.lean  RestrictedDiffQuotient.lean  RestrictedDiffQuotientMem.lean
lean/EllipticDirichlet/Sobolev/: Basic.lean  Coefficients.lean
lean/EllipticPdes/: BilinearForm.lean  BoundedInstances.lean  Compactness.lean  Existence.lean  Fredholm.lean  FredholmComplete.lean  Garding.lean  Hneg.lean  RellichDischarge.lean  Spectrum.lean  SpectrumSigma.lean
lean/EllipticPdes/Analysis/: EuclideanFunctionalNorm.lean  FrechetKolmogorov.lean  LpExtendByZero.lean  LpTranslation.lean  PoincareInequality.lean
lean/EllipticPdes/Embedding/: Convolution.lean  Morrey.lean  MorreyOneDim.lean  RayIntegral.lean  WeakDerivBridge.lean  WeakGradient.lean
lean/EllipticPdes/Existence/: Existence.lean  Garding.lean
lean/EllipticPdes/Form/: GeneralForm.lean  Hneg.lean
lean/EllipticPdes/Fredholm/: Compactness.lean  Fredholm.lean  FredholmComplete.lean
lean/EllipticPdes/Poincare/: BoundedDomain.lean  BoxSlice.lean  Density.lean  Domain.lean  Fubini.lean  Geometry.lean  OneDim.lean
lean/EllipticPdes/Regularity/: Caccioppoli.lean  CoeffC1.lean  CoeffC2.lean  CutoffTower.lean  DiffQuotientBound.lean  Interior.lean  (+5 more)
numerics/python/: README.md  figures.py  pyproject.toml
numerics/python/data/: validation.csv
numerics/rust/: Cargo.toml
numerics/rust/crates/elliptic-fem/: Cargo.toml
numerics/rust/crates/elliptic-fem/src/: assemble.rs  constants.rs  convergence.rs  eig.rs  ensemble.rs  lib.rs  mesh.rs  rng.rs  verify.rs
(+8 files in other folders)
