[workspace]
resolver = "2"
members = ["crates/elliptic-fem"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# The numerics layer takes its box meshes from the local `cartan-dec` DEC stack
# (path dependency into ~/cartan). The P1 stiffness and mass are assembled in
# `elliptic-fem` itself, since the unit-square grid is right-angled and so not
# well-centred for cartan-dec's circumcentric Hodge star.
